@@ -1,5 +1,7 @@
 Revision history for DBIx::Class
 
+        - Do not attempt to deploy FK constraints pointing to a View
+
 0.08114 2009-11-14 17:45:00 (UTC)
         - Preliminary support for MSSQL via DBD::ADO
         - Fix botched 0.08113 release (invalid tarball)
